<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#979595"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button2"
        android:layout_width="75dp"
        android:layout_height="85dp"
        android:layout_marginStart="38dp"
        android:layout_marginBottom="339dp"
        android:backgroundTint="#518515"
        android:text="@string/start"
        android:textColor="#000000"
        android:textSize="12sp"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="75dp"
        android:layout_height="85dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="342dp"
        android:backgroundTint="#3E3D3D"
        android:text="@string/krug"
        android:textColor="#000000"
        android:textSize="14sp"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button3"
        android:layout_width="75dp"
        android:layout_height="85dp"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="343dp"
        android:backgroundTint="#3E3D3D"
        android:text="@string/cbros"
        android:textColor="#000000"
        android:textSize="11sp"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button2"
        tools:ignore="TextContrastCheck" />

    <View
        android:id="@+id/view2"
        android:layout_width="459dp"
        android:layout_height="88dp"
        android:background="#676666"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/_1048"
        android:contentDescription="@string/taimpng" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/_53054"
        android:contentDescription="@string/secungpng" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="1dp"
        android:text="@string/secuntext"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="71dp"
        android:text="@string/taimtext"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextTime3"
        android:layout_width="313dp"
        android:layout_height="107dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.185"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>