<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#979595"
    tools:context=".MainActivity2">

    <Button
        android:id="@+id/button4"
        android:layout_width="75dp"
        android:layout_height="85dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="318dp"
        android:backgroundTint="#3E3D3D"
        android:text="@string/pause"
        android:textColor="#000000"
        android:textSize="11sp"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <Button
        android:id="@+id/button6"
        android:layout_width="75dp"
        android:layout_height="85dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="318dp"
        android:backgroundTint="#3E3D3D"
        android:text="@string/otmena"
        android:textColor="#000000"
        android:textSize="9sp"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button5"
        android:layout_width="75dp"
        android:layout_height="85dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="318dp"
        android:backgroundTint="#518515"
        android:text="@string/startt"
        android:textColor="#000000"
        android:textSize="12sp"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="313dp"
        android:layout_height="107dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="89dp"
        android:ems="10"
        android:inputType="time"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <View
        android:id="@+id/view"
        android:layout_width="459dp"
        android:layout_height="88dp"
        android:layout_marginTop="226dp"
        android:background="#676666"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:layout_constraintVertical_bias="0.75" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/_1048"
        android:contentDescription="@string/secpn" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/_53054"
        android:contentDescription="@string/taimpn" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:text="@string/secundtex"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="71dp"
        android:text="@string/timetex"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>